--- a/thpt_2025.ipynb
+++ b/thpt_2025.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4246bf81",
    "metadata": {},
    "outputs": [],
@@ -1080,12 +1080,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "id": "e991adbd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_pretty_barplot(df, col_name, save_path):\n",
+    "def plot_pretty_barplot(df, col_name, save_path, color=\"skyblue\"):\n",
     "    import matplotlib.ticker as mticker\n",
     "    \n",
     "    # Ép kiểu dữ liệu sang float, lỗi thì NaN\n",
@@ -1108,9 +1108,9 @@
     "    std = data.std()\n",
     "    min_, max_ = data.min(), data.max()\n",
     "\n",
-    "    # Vẽ barplot\n",
+    "    # Vẽ barplot với màu được chỉ định\n",
     "    plt.figure(figsize=(18, 6))\n",
-    "    ax = sns.barplot(x=x, y=y, color=\"skyblue\", edgecolor=\"black\")\n",
+    "    ax = sns.barplot(x=x, y=y, color=color, edgecolor=\"black\")\n",
     "\n",
     "    # Tiêu đề và trục\n",
     "    plt.title(f\"Phân bố tổng điểm: {col_name} ({count:,} thí sinh)\", fontsize=14, weight='bold')\n",
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "id": "dd913947",
    "metadata": {},
    "outputs": [
@@ -1235,8 +1235,14 @@
     }
    ],
    "source": [
-    "# Loop tất cả tổ hợp và vẽ biểu đồ\n",
-    "base_folder = \"sources/internal\"\n",
+    "# Mapping màu sắc theo từng nhóm khối (Ban)\n",
+    "group_colors = {\n",
+    "    \"Ban A\": \"#3498db\",   # Xanh dương\n",
+    "    \"Ban B\": \"#2ecc71\",   # Xanh lá\n",
+    "    \"Ban C\": \"#e67e22\",   # Cam\n",
+    "    \"Ban D\": \"#9b59b6\",   # Tím\n",
+    "    # Có thể bổ sung thêm nếu có Ban E, H, K, v.v.\n",
+    "}\n",
     "\n",
     "base_folder = \"sources/internal\"\n",
     "\n",
@@ -1249,9 +1255,12 @@
     "        # Đường dẫn lưu file ảnh\n",
     "        save_path = os.path.join(folder_path, f\"{ma_khoi}.png\")\n",
     "\n",
+    "        # Lấy màu theo tên nhóm, fallback = \"skyblue\"\n",
+    "        color = group_colors.get(group, \"skyblue\")\n",
+    "\n",
     "        # Vẽ và lưu biểu đồ\n",
-    "        plot_pretty_barplot(df_2025_union, ma_khoi, save_path)\n",
-    "        print(f\"✅ Đã vẽ xong {ma_khoi} ({group}) → {save_path}\")        "
+    "        plot_pretty_barplot(df_2025_union, ma_khoi, save_path, color=color)\n",
+    "        print(f\"✅ Đã vẽ xong {ma_khoi} ({group}) → {save_path}\")"
    ]
   },
   {
